# GB-Emulator

./: .clang-format  .clangd  .gitignore  ;  CMakeLists.txt  Doxyfile  Doxyfile.bak  Makefile  README.md  cpu_log.txt  generate_clangd.sh  gui  imgui.ini  tags
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_000002_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b42362a27af14d860f8c7d41e431557f.html  dir_b42362a27af14d860f8c7d41e431557f.js  dir_b42362a27af14d860f8c7d41e431557f_dep.map  dir_b42362a27af14d860f8c7d41e431557f_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func.js  functions_func_a.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_m.html  functions_func_o.html  functions_func_p.html  functions_func_r.html  functions_func_s.html  (+2616 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  (+68 more)
include/: gb.h  ops.h  shared.h  tables.h  typedefs.h
include/dear_imgui/: imgui_impl_glfw.h  imgui_wrapper.h
include2/: heap.h  ijvm.h  ijvm_struct.h  network.h  ops.h  print.h  stack.h  util.h
shader/: fragment_shader.glsl  shader.cpp  shader.h
src/: gb.c  gui.cpp  imgui_draw.cpp  imgui_wrapper.cpp  main.cpp  main.cpp.bak  ops.c  tables.c
src2/: heap.c  ijvm.c  main.cpp  net_test.py  network.c  ops.c  print.c  stack.c
